@@ -4,6 +4,7 @@ AV2 Changelog :: version a4.2
 * New bending tab icons from FavouriteDragon
 * Skills menu opens at current bending
 * Regen chi on sleep
+* Fire arc does additional damage & push on hit
 
 > Fix penguin, firebender, and airbender name tags being shown
 > Fix cracked account issues - gen fake account UUID based on username
